--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,17 @@
   font-display: swap;
 }
 
+html {
+  height:100%;
+}
+
 body {
   font-family: "PT Sans", sans-serif;
   color: #000000;
   background-color: #F2F2F2;
   margin: 0;
   min-width: 1280px;
+  height:100%;
 }
 
 .body-container {
@@ -28,6 +33,13 @@ body {
   background-color: #FFFFFF;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   margin: 0 auto;
+  min-height:100%;
+  display:flex;
+  flex-direction: column;
+}
+
+.main {
+  flex-grow: 1;
 }
 
 .button {
@@ -47,7 +59,7 @@ border: none;
 .navigation-logo {
   display: block;
   width: 138px;
-  height: 64px;
+  min-height: 64px;
 }
 
 .navigation-list {
@@ -123,7 +135,6 @@ border: none;
   display: block;
   margin-left: auto;
   margin-right: auto;
-
 }
 
 .hero-text {
@@ -159,6 +170,7 @@ border: none;
 
 .advantage-item {
   width: 400px;
+  min-height: 385px;
 }
 
 .advantage-item-header {
@@ -212,6 +224,9 @@ border: none;
   list-style: none;
   margin: 0;
   padding: 0;
+  text-align: center;
+  mix-width: 400px;
+  min-height:385px;
 }
 
 .promo-item-header {
@@ -229,25 +244,31 @@ border: none;
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.house {
-  background-image: url(../images/promo/accomodation.svg);
-  background-repeat: no-repeat;
+.house-img {
   width: 75px;
   height: 72px;
+  background-image: url(../images/promo/accomodation.svg);
+  background-repeat: no-repeat;
+  display: inline-block;
+  text-align: center;
 }
 
-.food {
+.food-img {
+  width: 75px;
+  height: 72px;
   background-image: url(../images/promo/food.svg);
   background-repeat: no-repeat;
-  width: 74px;
-  height: 70px;
+  display: inline-block;
+  text-align: center;
 }
 
-.souvenirs {
+.souvenirs-img {
+  width: 75px;
+  height: 76px;
   background-image: url(../images/promo/souvenir.svg);
   background-repeat: no-repeat;
-  width: 64px;
-  height: 76px;
+  display: inline-block;
+  text-align: center;
 }
 
 /* Index-page Hotel-search */
@@ -535,7 +556,6 @@ border: none;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
-  color: #ffffff;
   background-color: #82B3D3;
 }
 
