--- a/css/style.css
+++ b/css/style.css
@@ -145,10 +145,9 @@ body {
 
 .main-footer {
   display: grid;
-  grid-template-columns: 120px 1fr 115px;
+  grid-template-columns: 1fr auto 1fr;
   padding: 40px 70px 30px 70px;
   align-items: center;
-  justify-items: center;
 }
 
 .social {
@@ -170,6 +169,11 @@ body {
   padding: 11px 12px;
 }
 
+.contact-phone {
+  min-width: 720px;
+  text-align: center;
+}
+
 .phone {
   font-size: 40px;
   line-height: 40px;
@@ -177,10 +181,19 @@ body {
   color: #000000;
   background-color: #ffffff;
   text-transform: uppercase;
+  display: block;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .devlogo-container {
+  min-width: 115px;
   margin-left: auto;
+}
+.devlogo {
+  display: block;
+  padding-top: 9px;
+  padding-bottom: 9px;
 }
 
 /* visually hidden */
