--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,15 @@ body {
   border-radius: 4px;
   min-height: 52px;
   appearance: none;
+  cursor: pointer;
+}
+
+.button:active {
+opacity:0.3;
+}
+
+.button:disabled {
+background-color: #E5E5E5;
 }
 
 /* Header */
@@ -87,10 +96,6 @@ body {
   margin-left: 30px;
 }
 
-.nav-buttons {
-  margin-left: auto;
-}
-
 .navigation-item {
   font-weight: 700;
   font-size: 20px;
@@ -105,13 +110,22 @@ body {
   display: block;
 }
 
+.navigation-link:hover,
+.navigation-link:focus {
+  background-color: #FFFFFF;
+}
+
+.navigation-link:active {
+  opacity:0.3;
+}
+
 .current::after {
   content: '';
   display: inline-block;
   position: absolute;
   background: #756257;
-  left: 254px;
-  right: 878px;
+  left: 256px;
+  right: 876px;
   bottom: -1px;
   height: 2px;
 }
@@ -127,8 +141,27 @@ body {
   height: 2px;
 }
 
+.nav-buttons {
+  margin-left: auto;
+}
+
 .navigation-item-button {
   padding: 20px 12px;
+  position: relative;
+}
+
+.favourite-hotels {
+  position: absolute;
+  left: 20px;
+  top: 11px;
+  padding: 5px;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 10px;
+  color: #ffffff;
+  background-color: #7db54f;
+  border-radius: 10px;
+  max-width: 50px;
 }
 
 .wish-button {
@@ -141,11 +174,16 @@ body {
   min-height: 36px;
 }
 
+.wish-button:hover,
+.wish-button:focus {
+background-color: #615048;
+}
+
 /* Footer */
 
 .main-footer {
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   padding: 40px 70px 30px 70px;
   align-items: center;
 }
@@ -161,16 +199,44 @@ body {
 .social-item {
   min-width: 47px;
   min-height: 40px;
-  text-align: center;
 }
 
-.social-item a {
+.social-link {
   display: block;
-  padding: 11px 12px;
+  padding: 23px 12px;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-social-icon {
+  fill: #83B3D3;
+}
+
+.footer-social-icon:hover {
+  fill: #68A2CA;
+}
+
+.footer-social-icon:focus {
+  fill: #68A2CA;
+}
+
+.footer-social-icon:active {
+  fill: #68A2CA;
+  opacity: 0.3;
+}
+
+.footer-social-tl {
+  background-image: url(../images/socials/telegram.svg);
+}
+
+.footer-social-yt {
+  background-image: url(../images/socials/youtube.svg);
 }
 
 .contact-phone {
-  min-width: 720px;
   text-align: center;
 }
 
@@ -186,14 +252,44 @@ body {
   padding-bottom: 5px;
 }
 
+.phone:hover {
+  color: #756157;
+}
+
+.phone:focus {
+  color: #756157;
+}
+
+.phone:active {
+  color: #756157;
+  opacity: 0.3;
+}
+
 .devlogo-container {
   min-width: 115px;
   margin-left: auto;
 }
+
 .devlogo {
   display: block;
   padding-top: 9px;
   padding-bottom: 9px;
+}
+
+.devlogo-svg {
+  fill: #000;
+}
+
+.devlogo-svg:hover {
+  fill: rgba(117, 97, 87, 1);
+}
+
+.devlogo-svg:focus {
+  fill: rgba(117, 97, 87, 1);
+}
+
+.devlogo-svg:active {
+  fill: rgba(117, 97, 87, 0.3);
 }
 
 /* visually hidden */
@@ -282,6 +378,15 @@ body {
   text-align: center;
 }
 
+.advantage-item-header::after {
+  content: '';
+  display: block;
+  margin: 30px auto;
+  height: 2px;
+  width: 60px;
+  background-color: rgba(255, 255, 255, 0.30);
+}
+
 .advantage-item-description {
   font-weight: 400;
   font-size: 18px;
@@ -301,11 +406,15 @@ body {
   order: -1;
 }
 
-.middle-block {
+.advantage-middle-block {
   background-color: rgba(131, 179, 211, 0.2);
 }
 
-.corner-block {
+.header-underline::after {
+  background: rgba(0, 0, 0, 0.30);
+}
+
+.advantage-corner-block {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
@@ -379,9 +488,8 @@ body {
 
 .promo-icon {
   width: 75px;
-  height: 72px;
+  height: 76px;
   display: inline-block;
-  text-align: center;
 }
 
 .house-img {
@@ -427,11 +535,16 @@ body {
   display: block;
 }
 
-.search-btn {
+.search-button {
   font-size: 20px;
   line-height: 36px;
   color: #ffffff;
   background-color: #756157;
+}
+
+.search-button:hover,
+.search-button:focus {
+  background-color: #615048;
 }
 
 /* Index-page Subscribe-index */
@@ -479,6 +592,11 @@ body {
   border-radius: 0px 4px 4px 0px;
 }
 
+.subsc-button:hover,
+.subsc-button:focus {
+  background-color: #68A2CA;
+}
+
 .text-input-field {
   min-height: 52px;
   min-width: 452px;
@@ -517,29 +635,46 @@ body {
   padding: 0;
   margin-bottom: 40px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  gap: 10px;
 }
 
-/* .home-icon {
+.breadcrumbs-item:not(:last-child) {
+  position: relative;
+  padding-right: 10px;
+  margin-right: 18px;
+}
+
+.breadcrumbs-link-home {
+  display: block;
   background-image: url(../images/decor/breadcrubs1.svg);
   background-repeat: no-repeat;
-  width: 12px;
-  height: 12px;
+  background-size: 15px 15px;
+  background-position: center center;
+  padding: 3px 0;
+  width: 15px;
+  height: 15px;
 }
 
-.icon-next {
+.breadcrumbs-link:hover {
+  opacity: 0.6;
+}
+
+.breadcrumbs-link:active {
+  opacity: 0.3;
+}
+
+.breadcrumbs-item::after {
+  position: absolute;
+  content: '';
   background-image: url(../images/decor/breadcrubs2.svg);
   background-repeat: no-repeat;
-  width: 6.39px;
-  height: 9.94px;
+  background-size: 7px 10px;
+  width: 6px;
+  height: 9px;
+  top: 3px;
+  right: -8px;
 }
-
-.breadcrumbs-link {
-  text-decoration: none;
-  display: flex;
-  gap: 10px
-} */
 
 /* Catalog-page Filter */
 
@@ -560,6 +695,7 @@ body {
 .filter:last-child {
   margin-bottom: 0;
   margin-right: 0;
+  margin-top: 56px;
 }
 
 .filter-header {
@@ -570,7 +706,6 @@ body {
 }
 
 .filter-price {
-  display: flex;
   margin-left: 70px;
 }
 
@@ -589,6 +724,11 @@ body {
 
 .filter-item-price {
   position: relative;
+}
+
+.filter-price-container {
+  display: flex;
+  margin-bottom: 36px;
 }
 
 .placeholder {
@@ -621,9 +761,14 @@ body {
   border-radius: 0px 4px 4px 0px;
 }
 
+.filter-price-range {
+  display: block;
+  width: 290px;
+}
+
+
 .filter-buttons {
   display: grid;
-  align-content: end;
 }
 
 .submit-button {
@@ -633,6 +778,11 @@ body {
   background-color: #82B3D3;
   margin-bottom: 32px;
   min-height: 36px;
+}
+
+.submit-button:hover,
+.submit-button:focus {
+  background-color: #68A2CA;
 }
 
 .reset-button {
@@ -646,6 +796,7 @@ body {
 /* Catalog-page Results */
 
 .controls {
+  width: 1060px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -663,14 +814,29 @@ body {
   line-height: 36px;
   text-transform: uppercase;
   margin: 0;
+  margin-right: 200px;
 }
 
 .select-control {
+  min-width: 292px;
+  margin-right: 70px;
   font-size: 18px;
   line-height: 21px;
   border-radius: 4px;
   border: 2px solid #E5E5E5;
-  padding: 14px 20px;
+  padding: 12px 20px;
+  font-family: inherit;
+  color: #333333;
+}
+
+.select-control:hover,
+.select-control:focus {
+  border: 2px solid #68A2CA;
+  border-radius: 4px;
+}
+
+.select-control:disabled {
+  opacity: 0.3;
 }
 
 .card-view-buttons {
@@ -679,17 +845,17 @@ body {
   padding: 0;
   display: flex;
   flex-wrap: wrap;
+  font-family: inherit;
 }
 
 .card-view-item {
   border-radius: 4px;
   border: 2px solid #E5E5E5;
-  margin-left: 8px;
+  margin-right: 8px;
 }
 
-.card-view-item:first-child {
-  border: 2px solid #000000;
-  margin-left: 0;
+.card-view-item:last-child {
+  margin-right: 0;
 }
 
 .card-view-button {
@@ -699,6 +865,18 @@ body {
   border: none;
   background-repeat: no-repeat;
   background-position: center;
+  background-color: inherit;
+}
+
+.card-view-button:hover,
+.card-view-button:active {
+  border: 2px solid #000000;
+  border-radius: 4px;
+}
+
+.card-view-button:focus {
+  border: 2px solid #68A2CA;
+  border-radius: 4px;
 }
 
 .grid {
@@ -727,40 +905,34 @@ body {
   margin-bottom: 80px;
 }
 
-.hotel-link {
-  display: block;
-  min-width: 300px;
-  min-height: 212px;
-}
-
 .hotel-list-item {
   padding: 20px;
   border-radius: 4px;
   border: 1px solid #E6E6E6;
+  display: grid;
+  grid-template-columns: repeat(2, 140px);
+  gap: 16px 20px;
+  grid-template-rows: 212px 1fr;
+}
+
+.hotel-link {
+  display: block;
+  min-width: 300px;
+  min-height: 212px;
+  grid-column: span 2;
 }
 
 .hotel-name {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+  grid-column: span 2;
 }
 
 .hotel-price {
   font-size: 18px;
   line-height: 21px;
   color: #333333;
-  display: flex;
-  justify-content: space-between;
-}
-
-.button-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.rating {
-  display: flex;
-  justify-content: space-between;
 }
 
 .detail-button {
@@ -774,6 +946,10 @@ body {
   padding: 8px 26px;
   margin-right: 20px;
 }
+.detail-button:hover,
+.detail-button:focus {
+  background-color: #615048;
+}
 
 .favorite-button {
   width: 140px;
@@ -785,9 +961,42 @@ body {
   padding: 8px 18px;
 }
 
+.favorite-button:hover,
+.favorite-button:focus {
+  background-color: #68A2CA;
+}
+
 .added {
   background-color: #7DB54F;
   padding: 8px 18px;
+}
+
+.added:hover,
+.added:focus {
+  background-color: #6C9E42;
+}
+
+.hotel-stars::before {
+  content: '';
+  display: block;
+  background-repeat: space no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-image: url(../images/decor/star.svg);
+  height: 17px;
+}
+
+.villas-hotel-stars,
+.amara-hotel-stars {
+  width: 80px;
+}
+
+.desert-hotel-stars {
+  width: 66px;
+}
+
+.greentree-hotel-stars {
+  width: 42px;
 }
 
 .rating-value {
@@ -815,13 +1024,10 @@ body {
 
 .pagination-item {
   min-width: 60px;
-  height: 60px;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
-  background-color: #82B3D3;
   text-align: center;
-  border-radius: 4px;
   margin-right: 8px;
 }
 
@@ -829,22 +1035,40 @@ body {
   margin-right: 0;
 }
 
-.current-background {
-  background-color: #F2F2F2;
-}
-
-.more-background {
-  background-color: #FFFFFF;
-}
-
 .pagination-link {
   text-decoration: none;
   color: #ffffff;
-  padding: 11px 19px 13px 19px;
+  padding: 12px 19px;
   display: block;
   text-align: center;
+  border-radius: 4px;
+  background-color: #82B3D3;
+}
+
+.pagination-link:hover,
+.pagination-link:focus {
+  background-color: #68A2CA;
+}
+
+.pagination-link:active {
+  background-color: #82B3D3;
+  opacity: 0.3;
 }
 
 .pagination-current {
   color: #000000;
+}
+
+.pagination-link-background,
+.pagination-link-background:focus,
+.pagination-link-background:hover,
+.pagination-link-background:active {
+  background-color: #F2F2F2;
+}
+
+.pagination-link-more-background,
+.pagination-link-more-background:focus,
+.pagination-link-more-background:hover,
+.pagination-link-more-background:active {
+  background-color: #FFFFFF;
 }
