--- a/css/style.css
+++ b/css/style.css
@@ -59,17 +59,19 @@ body {
   min-height: 52px;
   appearance: none;
   cursor: pointer;
+  display:inline-block;
 }
 
 .button:active {
-opacity:0.3;
+  opacity: 0.3;
 }
 
 .button:disabled {
-background-color: #E5E5E5;
+  background-color: #E5E5E5;
 }
 
 /* Header */
+
 .main-header {
   position: relative;
 }
@@ -84,6 +86,7 @@ background-color: #E5E5E5;
 .navigation-logo {
   display: block;
   height: 64px;
+  width: 140px;
 }
 
 .navigation-list {
@@ -110,13 +113,26 @@ background-color: #E5E5E5;
   display: block;
 }
 
-.navigation-link:hover,
-.navigation-link:focus {
-  background-color: #FFFFFF;
+.navigation-link-favourite,
+.navigation-link-search {
+  display: block;
+  padding: 22px 12px;
+  position: relative;
 }
 
-.navigation-link:active {
-  opacity:0.3;
+.navigation-link:hover,
+.navigation-link:focus,
+.navigation-link-favourite:hover,
+.navigation-link-favourite:focus,
+.navigation-link-search:hover,
+.navigation-link-search:focus {
+  background-color: #f2f2f2;
+}
+
+.navigation-link:active,
+.navigation-link-favourite:active,
+.navigation-link-search:active {
+  opacity: 0.3;
 }
 
 .current::after {
@@ -146,7 +162,6 @@ background-color: #E5E5E5;
 }
 
 .navigation-item-button {
-  padding: 20px 12px;
   position: relative;
 }
 
@@ -176,14 +191,14 @@ background-color: #E5E5E5;
 
 .wish-button:hover,
 .wish-button:focus {
-background-color: #615048;
+  background-color: #615048;
 }
 
 /* Footer */
 
 .main-footer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr auto 1fr;
   padding: 40px 70px 30px 70px;
   align-items: center;
 }
@@ -202,10 +217,7 @@ background-color: #615048;
 }
 
 .social-link {
-  display: block;
   padding: 23px 12px;
-  background-repeat: no-repeat;
-  background-position: center;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -215,10 +227,7 @@ background-color: #615048;
   fill: #83B3D3;
 }
 
-.footer-social-icon:hover {
-  fill: #68A2CA;
-}
-
+.footer-social-icon:hover,
 .footer-social-icon:focus {
   fill: #68A2CA;
 }
@@ -226,14 +235,6 @@ background-color: #615048;
 .footer-social-icon:active {
   fill: #68A2CA;
   opacity: 0.3;
-}
-
-.footer-social-tl {
-  background-image: url(../images/socials/telegram.svg);
-}
-
-.footer-social-yt {
-  background-image: url(../images/socials/youtube.svg);
 }
 
 .contact-phone {
@@ -252,10 +253,7 @@ background-color: #615048;
   padding-bottom: 5px;
 }
 
-.phone:hover {
-  color: #756157;
-}
-
+.phone:hover,
 .phone:focus {
   color: #756157;
 }
@@ -280,10 +278,7 @@ background-color: #615048;
   fill: #000;
 }
 
-.devlogo-svg:hover {
-  fill: rgba(117, 97, 87, 1);
-}
-
+.devlogo-svg:hover,
 .devlogo-svg:focus {
   fill: rgba(117, 97, 87, 1);
 }
@@ -312,10 +307,11 @@ background-color: #615048;
   background-image: url(../images/decor/herobackgroundpattern.svg), url(../images/decor/herobackground.jpg);
   background-repeat: no-repeat, no-repeat;
   background-position: bottom left, top left;
-  background-size: 100% auto;
+  background-size: 100% auto, cover;
   background-clip: border-box;
   background-color: #82B3D3;
   padding: 51px 70px 82px 70px;
+  color: #FFFFFF;
 }
 
 .background-img {
@@ -369,11 +365,10 @@ background-color: #615048;
 }
 
 .advantage-item-header {
-  font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   margin: 0;
-  margin-bottom: 62px;
+  margin-bottom: 32px;
   text-transform: uppercase;
   text-align: center;
 }
@@ -381,7 +376,7 @@ background-color: #615048;
 .advantage-item-header::after {
   content: '';
   display: block;
-  margin: 30px auto;
+  margin: 30px auto 0;
   height: 2px;
   width: 60px;
   background-color: rgba(255, 255, 255, 0.30);
@@ -406,24 +401,20 @@ background-color: #615048;
   order: -1;
 }
 
-.advantage-middle-block {
-  background-color: rgba(131, 179, 211, 0.2);
-}
-
 .header-underline::after {
-  background: rgba(0, 0, 0, 0.30);
+  background-color: rgba(0, 0, 0, 0.30);
 }
 
-.advantage-corner-block {
+.advantage-corner-block:nth-child(even) {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.advantave-item {
-  display: block;
+.advantage-middle-block:nth-child(odd) {
+  background-color: rgba(131, 179, 211, 0.2);
 }
 
 .advantage-image {
-  width: 100%;
+  width: 800px;
   height: 100%;
   object-fit: cover;
 }
@@ -472,39 +463,53 @@ background-color: #615048;
 }
 
 .promo-item-header {
-  font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+  margin: 0;
+  margin-bottom: 30px;
 }
 
 .promo-item-description {
   font-size: 18px;
   line-height: 21px;
+  margin: 0;
 }
 
 .side-block {
   background-color: rgba(131, 179, 211, 0.12);
 }
 
-.promo-icon {
+.house-img:before {
+  content: '';
   width: 75px;
   height: 76px;
-  display: inline-block;
-}
-
-.house-img {
+  display: block;
   background-image: url(../images/promo/accomodation.svg);
   background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 30px;
 }
 
-.food-img {
+.food-img:before {
+  content: '';
+  width: 75px;
+  height: 76px;
+  display: block;
   background-image: url(../images/promo/food.svg);
   background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 30px;
 }
 
-.souvenirs-img {
+.souvenirs-img:before {
+  content: '';
+  width: 75px;
+  height: 76px;
+  display: block;
   background-image: url(../images/promo/souvenir.svg);
   background-repeat: no-repeat;
+  background-position: center;
+  margin-bottom: 30px;
 }
 
 /* Index-page Hotel-search */
@@ -563,7 +568,6 @@ background-color: #615048;
 }
 
 .subsc-header {
-  font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
@@ -580,8 +584,8 @@ background-color: #615048;
 
 .subscribe-form {
   display: flex;
-  width: 760px;
-  margin: auto;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .subsc-button {
@@ -623,7 +627,6 @@ background-color: #615048;
 }
 
 .hotel-selection-header {
-  font-weight: 700;
   font-size: 60px;
   line-height: 78px;
   margin: 0;
@@ -699,7 +702,6 @@ background-color: #615048;
 }
 
 .filter-header {
-  font-weight: 700;
   font-size: 20px;
   line-height: 24px;
   margin-bottom: 32px;
@@ -791,6 +793,11 @@ background-color: #615048;
   color: #ffffff;
   background-color: transparent;
   min-height: 36px;
+}
+
+.reset-button:hover,
+.reset-button:focus {
+  opacity: 0.3;
 }
 
 /* Catalog-page Results */
@@ -920,6 +927,7 @@ background-color: #615048;
   min-width: 300px;
   min-height: 212px;
   grid-column: span 2;
+  background-color: #82B3D3;
 }
 
 .hotel-name {
@@ -927,6 +935,7 @@ background-color: #615048;
   font-size: 24px;
   line-height: 28px;
   grid-column: span 2;
+  margin: 0;
 }
 
 .hotel-price {
@@ -946,6 +955,7 @@ background-color: #615048;
   padding: 8px 26px;
   margin-right: 20px;
 }
+
 .detail-button:hover,
 .detail-button:focus {
   background-color: #615048;
@@ -986,16 +996,15 @@ background-color: #615048;
   height: 17px;
 }
 
-.villas-hotel-stars,
-.amara-hotel-stars {
+.four-hotel-stars {
   width: 80px;
 }
 
-.desert-hotel-stars {
+.three-hotel-stars {
   width: 66px;
 }
 
-.greentree-hotel-stars {
+.two-hotel-stars {
   width: 42px;
 }
 
