--- a/css/style.css
+++ b/css/style.css
@@ -667,7 +667,7 @@ body {
   opacity: 0.3;
 }
 
-.breadcrumbs-item-after::after {
+.breadcrumbs-item:not(:last-child)::after {
   position: absolute;
   content: '';
   background-image: url(../images/decor/breadcrubs2.svg);
@@ -675,7 +675,8 @@ body {
   background-size: 7px 10px;
   width: 6px;
   height: 9px;
-  top: 3px;
+  top: 50%;
+  transform: translateY(-50%);
   right: -8px;
 }
 
@@ -711,21 +712,66 @@ body {
   margin-left: 70px;
 }
 
-.filter-list-item {
-  margin-bottom: 16px;
-}
-
-.filter-list-item:last-child {
-  margin-bottom: 0;
-}
 
 .filter-item {
   font-size: 18px;
   line-height: 23px;
+  cursor: pointer;
+  position: relative;
+  display:flex;
+  margin-bottom: 16px;
+}
+.filter-item:last-child {
+  margin-bottom: 0;
 }
 
-.filter-item-price {
-  position: relative;
+.filter-item:hover {
+  opacity:0.6;
+}
+
+.input-checkbox[type="checkbox"] {
+  background-color: #FFFFFF;
+  border-radius: 4px;
+  appearance: none;
+  width:20px;
+  height:20px;
+  margin:0;
+  margin-right:16px;
+  cursor:pointer;
+}
+
+.input-checkbox[type="checkbox"]:checked {
+background-image: url(../images/decor/tick.svg);
+background-repeat: no-repeat;
+background-size: 18px 19px;
+background-position: center top 1px;
+}
+
+.input-checkbox:focus,
+.input-radio:focus {
+  outline: 3px solid #83B3D3;
+}
+
+.input-radio[type="radio"] {
+  background-color: #FFFFFF;
+  border-radius: 50%;
+  appearance: none;
+  width:20px;
+  height:20px;
+  margin:0;
+  margin-right:16px;
+  cursor:pointer;
+}
+
+.input-radio[type="radio"]:checked {
+  background-image: url(../images/decor/radio.svg);
+  background-repeat: no-repeat;
+  background-size: 18px 19px;
+  background-position: center top 1px;
+  }
+
+.range-container {
+display:block;
 }
 
 .filter-price-container {
@@ -748,7 +794,7 @@ body {
   line-height: 24px;
   height: 48px;
   width: 143px;
-  padding: 12px 30px;
+  padding: 12px 20px;
   border: 4px solid #F2F2F2;
   background-color: #F2F2F2;
   margin-right: 2px;
@@ -759,15 +805,65 @@ body {
   border-radius: 4px 0px 0px 4px;
 }
 
+.price-value-from:focus {
+  outline:0;
+  border-radius: 4px 0px 0px 4px;
+  border: 3px solid #83B3D3;
+}
+
 .price-value-to {
   border-radius: 0px 4px 4px 0px;
 }
 
-.filter-price-range {
-  display: block;
-  width: 290px;
+.price-value-to:focus {
+  outline:0;
+  border-radius: 0px 4px 4px 0px;
+  border: 3px solid #83B3D3;
 }
 
+.range-scale {
+  position:relative;
+  height: 4px;
+  width:287px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.range-bar {
+  position:absolute;
+  left:0;
+  width:236px;
+  height: 4px;
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.toggler {
+  position:absolute;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border: 2px solid #ffffff;
+  border-radius: 20%;
+  cursor: pointer;
+}
+
+.toggler:focus {
+ outline: 2px solid rgba(131, 179, 211, 1);
+}
+.toggler:active {
+  outline: 2px solid rgba(131, 179, 211, 1);
+}
+
+.toggler-min {
+  top: 50%;
+  left:0;
+  transform: translateY(-50%);
+}
+
+.toggler-max {
+  top: 50%;
+  transform: translateY(-50%);
+  right:-5px;
+}
 
 .filter-buttons {
   display: grid;
@@ -835,6 +931,11 @@ body {
   padding: 12px 20px;
   font-family: inherit;
   color: #333333;
+  cursor: pointer;
+  appearance:none;
+  background-image: url(../images/decor/arrow.svg);
+  background-repeat: no-repeat;
+  background-position: right 20px center;
 }
 
 .select-control:hover,
@@ -874,6 +975,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-color: inherit;
+  cursor: pointer;
 }
 
 .card-view-button:hover,
