--- a/css/style.css
+++ b/css/style.css
@@ -743,13 +743,19 @@ body {
 .input-checkbox[type="checkbox"]:checked {
 background-image: url(../images/decor/tick.svg);
 background-repeat: no-repeat;
-background-size: 18px 19px;
+background-size: 18px 18px;
 background-position: center top 1px;
 }
 
 .input-checkbox:focus,
 .input-radio:focus {
   outline: 3px solid #83B3D3;
+}
+
+.input-checkbox:focus-visible,
+.input-radio:focus-visible {
+  outline: 3px solid #83B3D3;
+  outline-offset: 0;
 }
 
 .input-radio[type="radio"] {
@@ -766,7 +772,7 @@ background-position: center top 1px;
 .input-radio[type="radio"]:checked {
   background-image: url(../images/decor/radio.svg);
   background-repeat: no-repeat;
-  background-size: 18px 19px;
+  background-size: 18px 18px;
   background-position: center top 1px;
   }
 
@@ -1179,4 +1185,219 @@ display:block;
 .pagination-link-more-background:hover,
 .pagination-link-more-background:active {
   background-color: #FFFFFF;
+}
+
+/* Index-page Modal-window */
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(242, 242, 242, 0.80);
+}
+
+.modal-window {
+  position: relative;
+  margin: 396px auto 2574px;
+  width:717px;
+  padding: 64px 70px;
+  border-radius: 30px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 25px 50px 0px rgba(0, 0, 0, 0.15);
+}
+
+.modal-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap:48px;
+}
+
+.modal-header {
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #000000;
+  margin:0;
+  margin-bottom:64px;
+}
+
+.modal-close-button {
+  position:absolute;
+  right: 52px;
+  top: 64px;
+  width: 52px;
+  height: 52px;
+  background-color: #F2F2F2;
+  border-radius: 50%;
+  appearance: none;
+  border:none;
+  background-image: url(../images/decor/cross.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  padding:16px 16px;
+}
+
+.row-title,
+.count-header {
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: capitalize;
+  font-weight: 700;
+  color: #000000;
+}
+
+.check-in-date,
+.check-out-date {
+  appearance: none;
+  border:none;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  width:440px;
+  padding:12px 20px;
+  border-radius: 4px;
+  background-color: #F2F2F2;
+  background-image: url(../images/decor/calendar.svg);
+  background-repeat: no-repeat;
+  background-position: right, center;
+}
+
+.check-in-date-error {
+  color: #FF5757;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.check-out-date-error {
+  color: #333333;
+  font-size: 16px;;
+  line-height: 21px;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.people-count {
+  display:flex;
+  align-items: center;
+  position: relative;
+}
+.people-count:not(last-child) {
+  margin-right:88px;
+}
+
+.adult-count-header {
+  margin-right:46px;
+}
+
+.children-count-header {
+  margin-right:82px;
+}
+
+.tooltip {
+  position: absolute;
+
+}
+
+.tooltip-toggle {
+  width: 26px;
+  height: 26px;
+  appearance: none;
+  border:none;
+  border-radius: 50%;
+  display:inline-block;
+  background-color: #83B3D3;
+  position: absolute;
+  top: -15px;
+  left: 59px;
+  background-image: url(../images/decor/info.svg);
+  background-repeat: no-repeat;
+  background-position: center, center;
+  cursor: pointer;
+}
+
+.tooltip-text {
+  display:none;
+  width: 256px;
+  border-radius: 10px;
+  background-color: #333333;
+  box-shadow: 0px 15px 30px 0px rgba(0, 0, 0, 0.30);
+  color: #FFFFFF;
+  font-size: 16px;
+  line-height: 20px;
+  padding:15px 18px 18px 22px;
+  position: absolute;
+  top: 30px;
+  left: -57px;
+  z-index: 1;
+}
+
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text {
+  display: block;
+}
+
+.count-block {
+  display:flex;
+  width:110px;
+}
+
+.count-minus,
+.count-plus {
+  width:40px;
+  height: 48px;
+  display:inline-block;
+  cursor: pointer;
+  appearance: none;
+  border:none;
+  background-color: #F2F2F2;
+}
+
+.people-number {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 20px;
+  cursor: pointer;
+  width:31px;
+  height:48px;
+  border:none;
+  background-color: #F2F2F2;
+  text-align: center;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+input[type='number'],
+input[type="number"]:hover,
+input[type="number"]:focus {
+    appearance: none;
+    -moz-appearance: textfield;
+}
+
+.modal-search-button {
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-style: inherit;
+  width: 100%;
+  color: #FFFFFF;
+  padding: 18px 77px;
+  appearance: none;
+  border:none;
+  border-radius: 10px;
+  background-color: #83B3D3;
+  text-align: center;
+  cursor: pointer;
+  display:inline-block;
 }
