--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: > 2% and last 1 version
-*/
 
 @font-face {
   font-family: "PT Sans";
@@ -56,8 +50,8 @@ body {
 }
 
 .button {
+  height:36px;
   font-family: inherit;
-  text-align: center;
   text-transform: uppercase;
   font-weight: 700;
   border: none;
@@ -83,6 +77,7 @@ body {
 .main-header {
   position: relative;
   min-width: 1200px;
+  height: 64px;
 }
 
 .navigation {
@@ -101,12 +96,12 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
-  min-height: 64px;
   min-width: 339px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin-left: 30px;
+  margin-left: 27px;
+  margin-right: 285px;
 }
 
 .user-menu {
@@ -130,7 +125,7 @@ body {
 
 .navigation-link {
   display: block;
-  padding: 20px 16px;
+  padding: 22px 16px;
   text-decoration: none;
   color: #000;
 }
@@ -144,7 +139,7 @@ body {
 .navigation-link-favourite {
   position: relative;
   display: block;
-  padding: 21px 12px;
+  padding: 23px 12px;
 }
 
 .navigation-link:hover,
@@ -171,8 +166,8 @@ body {
 .current::after {
   content: '';
   position: absolute;
-  left: 256px;
-  right: 876px;
+  left: 253px;
+  right: 879px;
   bottom: -1px;
   display: inline-block;
   height: 2px;
@@ -218,10 +213,10 @@ body {
 
 .wish-button {
   min-height: 36px;
-  margin-left: 20px;
-  padding: 8px 34px;
+  margin-left: 25px;
+  padding: 8px 35px;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 21px;
   color: #FFF;
   background-color: #756157;
 }
@@ -236,21 +231,19 @@ body {
 .main-footer {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
-  padding: 40px 70px 30px;
+  grid-template-rows: 50px;
   align-items: center;
+  justify-items: start;
+  padding: 40px 70px 30px;
+
 }
 
 .social {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 5px 0;
   display: grid;
-  grid-template-columns: repeat(3, 40px);
-}
-
-.social-item {
-  min-width: 47px;
-  min-height: 40px;
+  grid-template-columns: repeat(3, 47px);
 }
 
 .social-link {
@@ -275,7 +268,7 @@ body {
 }
 
 .contact-phone {
-  text-align: center;
+  margin-left: 25px;
 }
 
 .phone {
@@ -354,7 +347,7 @@ body {
 
 .background-img {
   display: block;
-  width: 485px;
+  width: 458px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -363,12 +356,13 @@ body {
 
 .advantages-header-container {
   padding: 69px 70px;
+  margin-bottom: 21px;
 }
 
 .advantages-header-title {
   font-weight: 700;
   font-size: 30px;
-  line-height: 36px;
+  line-height: 35px;
   margin: 0;
   text-transform: uppercase;
   text-align: center;
@@ -382,7 +376,7 @@ body {
 .advantages-header-subtitle {
   font-weight: 400;
   font-size: 22px;
-  line-height: 26px;
+  line-height: 30px;
   color: #333;
   margin: 0;
   text-align: center;
@@ -399,16 +393,32 @@ body {
 .advantage-item {
   width: 400px;
   min-height: 385px;
-  padding: 103px 85px;
+  padding: 105px 85px;
 }
 
 .advantage-item-header {
   font-size: 24px;
-  line-height: 28px;
+  line-height: 33px;
   margin: 0;
   margin-bottom: 32px;
   text-transform: uppercase;
   text-align: center;
+}
+
+.advantage-item-description {
+  margin: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 20px;
+  text-align: center;
+}
+
+.near-picture-header {
+  line-height: 25px;
+}
+
+.near-picture-description {
+  line-height: 21px;
 }
 
 .advantage-item-header::after {
@@ -416,16 +426,8 @@ body {
   display: block;
   height: 2px;
   width: 60px;
-  margin: 30px auto 0;
+  margin: 27px auto 0;
   background-color: rgba(255, 255, 255, 0.30);
-}
-
-.advantage-item-description {
-  margin: 0;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
-  text-align: center;
 }
 
 .advantage-item-near-picture {
@@ -468,7 +470,7 @@ body {
   margin: 0;
   margin-bottom: 20px;
   font-size: 30px;
-  line-height: 36px;
+  line-height: 33px;
   text-transform: uppercase;
 }
 
@@ -476,10 +478,10 @@ body {
   display: block;
 }
 
-.subtitle {
+.promo-subtitle {
   margin: 0;
   font-size: 22px;
-  line-height: 26px;
+  line-height: 30px;
   color: #333;
 }
 
@@ -494,9 +496,6 @@ body {
 
 .promo-item {
   padding: 80px 85px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 400px;
 }
 
@@ -504,7 +503,8 @@ body {
   margin: 0;
   margin-bottom: 30px;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 22px;
+  text-transform: uppercase;
 }
 
 .promo-item-description {
@@ -580,6 +580,7 @@ body {
 }
 
 .search-button {
+  min-height: 52px;
   font-size: 20px;
   line-height: 36px;
   color: #FFF;
@@ -629,6 +630,8 @@ body {
 }
 
 .subsc-button {
+  width:232px;
+  min-height:52px;
   font-size: 20px;
   line-height: 36px;
   color: #FFF;
@@ -644,12 +647,14 @@ body {
 .text-input-field {
   min-height: 52px;
   min-width: 452px;
+  max-width:100%;
   padding: 12px 20px;
   border: 0;
   font-family: inherit;
   background-color: #F2F2F2;
   font-size: 18px;
   line-height: 24px;
+  border-radius: 4px 0 0 4px;
 }
 
 /* Catalog-page Breadcrumsb */
@@ -668,6 +673,7 @@ body {
 
 .hotel-selection-header {
   margin: 0;
+  margin-bottom: 6px;
   font-size: 60px;
   line-height: 78px;
 }
@@ -676,7 +682,7 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 40px;
+  margin-bottom: 42px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -685,7 +691,7 @@ body {
 .breadcrumbs-item:not(:last-child) {
   position: relative;
   margin-right: 18px;
-  padding-right: 10px;
+  padding-right: 7px;
 }
 
 .breadcrumbs-link-home {
@@ -735,10 +741,14 @@ body {
   margin-right: 70px;
 }
 
+.accomodation-type {
+  margin-right: 148px;
+}
+
 .filter:last-child {
   margin-bottom: 0;
   margin-right: 0;
-  margin-top: 56px;
+  margin-top: 54px;
 }
 
 .filter-header {
@@ -746,11 +756,6 @@ body {
   font-size: 20px;
   line-height: 24px;
 }
-
-.filter-price {
-  margin-left: 70px;
-}
-
 
 .filter-item {
   position: relative;
@@ -824,12 +829,12 @@ body {
 
 .filter-price-container {
   display: flex;
-  margin-bottom: 36px;
+  margin-bottom: 28px;
 }
 
 .placeholder {
   position: absolute;
-  right: 10px;
+  right: 20px;
   top: 13%;
   transform: translateY(20%);
   color: black;
@@ -912,7 +917,7 @@ body {
 .toggler-max {
   top: 50%;
   transform: translateY(-50%);
-  right: -5px;
+  right: 7px;
 }
 
 .filter-buttons {
@@ -921,7 +926,7 @@ body {
 
 .submit-button {
   min-height: 36px;
-  margin-bottom: 32px;
+  margin-bottom: 21px;
   font-size: 16px;
   line-height: 20px;
   color: #FFF;
@@ -959,11 +964,11 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 40px;
+  margin-bottom: 36px;
 }
 
 .search-result {
-  min-width: 338px;
+  width: 338px;
   margin: 0;
   margin-right:200px;
   padding-top:6px;
@@ -974,7 +979,7 @@ body {
 }
 
 .select-control {
-  min-width: 292px;
+  width: 292px;
   margin-right: 70px;
   padding: 12px 20px;
   font-size: 18px;
@@ -1195,7 +1200,7 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 60px;
+  margin-bottom: 58px;
 }
 
 .pagination-item {
@@ -1205,6 +1210,7 @@ body {
   font-size: 20px;
   line-height: 36px;
   text-align: center;
+  margin-bottom: 2px;
 }
 
 .pagination-item:last-child {
@@ -1263,7 +1269,6 @@ body {
   height: 100%;
   background-color: rgba(242, 242, 242, 0.80);
   display: flex;
-  justify-content: center;
   overflow: auto;
 }
 
@@ -1281,7 +1286,7 @@ body {
 .modal-form {
   display: flex;
   flex-wrap: wrap;
-  gap: 48px;
+  gap: 23px;
 }
 
 .modal-header {
@@ -1356,7 +1361,7 @@ body {
   -webkit-appearance: none;
           appearance: none;
   border: none;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 700;
   line-height: 24px;
   width: 440px;
@@ -1400,7 +1405,9 @@ body {
 
 .count-container {
   display: flex;
+  flex-wrap: wrap;
   width: 577px;
+  margin-bottom: 25px;
 }
 
 .people-count {
@@ -1416,6 +1423,7 @@ body {
 
 .adult {
   margin-right: 46px;
+  width: 91px;
 }
 
 .child {
@@ -1437,7 +1445,7 @@ body {
 }
 
 .count-plus {
-  margin-right: 88px;
+  margin-right: 87px;
   border-radius: 0 4px 4px 0;
 }
 
@@ -1532,7 +1540,7 @@ body {
   box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.30);
   color: #FFF;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 19px;
 }
 
 .tooltip-text::before {
